# scholardash

./: .airflowignore  .env.example  .gitignore  CLAUDE.md  DEPLOYMENT_OPTIONS.md  FUTURE_ENHANCEMENTS.md  IMPLEMENTATION_NOTES_PHASE1.md  IMPLEMENTATION_NOTES_PHASE2.md  IMPLEMENTATION_NOTES_PHASE3.md  IMPLEMENTATION_NOTES_PHASE4.md  IMPLEMENTATION_NOTES_PHASE5.md  PHASE_1_foundations.md  PHASE_2_dbt_transforms.md  PHASE_3_canada_sources.md  PHASE_4_airflow.md  PHASE_5_dashboard.md  PHASE_6_gap_analysis.md  PRODUCTION_ARCHITECTURE.md  docker-compose.yml  pyproject.toml  requirements.txt
config/: settings.py
dags/: scholarhub_pipeline.py
dashboard/: app.py
dashboard/pages/: __init__.py  active_funding.py  funding_trends.py  geography.py  institutions.py  pipeline_health.py
extractors/: base.py
extractors/federal_apis/: nih_extractor.py  nsf_extractor.py
extractors/utils/: db_connection.py  logger.py  rate_limiter.py
tests/: connection_test.ipynb
tests/fixtures/: nsf_sample.json
tests/unit/: test_nsf_extractor.py
transform/scholarhub/: .user.yml  dbt_project.yml  profiles.yml
transform/scholarhub/models/marts/: mart_funding_by_field.sql  mart_funding_by_institution.sql  mart_funding_by_year.sql
transform/scholarhub/models/staging/: schema.yml  stg_nih_projects.sql  stg_nsf_awards.sql
warehouse/: init_warehouse.py
